# actions-rust-cross

./: .gitignore  CODE_OF_CONDUCT.md  Changes.md  README.md  action.yml  determine-cross-version.sh  determine-latest-cross-version.sh  install-cross-nix.sh  install-cross-windows.ps1  musl-symlink.sh  precious.toml  set-build-command.sh  set-cross-compile.sh  set-cross-dir.sh  strip-binary.sh
.github/workflows/: lint.yml  test.yml
test-project/: Cargo.toml
test-project/src/: bin2.rs
test-project/subcrate/: Cargo.toml
test-projects/pure-rust/subcrate/src/: main.rs
test-projects/with-cxx/: README.md  build.rs
tests/: check-binary.pl  check-binary.sh  check-path.sh
tests/lib/IPC/System/: Simple.pm
tests/lib/Path/: Tiny.pm
